Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       roll_button_img = loadImage("assets/roll.png");
       roll_pressed_img = loadImage("assets/roll_pressed.png");
       
-      pixelFont = loadFont("assets/Pixele Unique.ttf");
+      pixelFont = loadFont("assets/Pixele_Unique.ttf");
     }
 
     function setup() {
