--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     }
     canvas {
       display: block;
+      touch-action: none;
     }
   </style>
 </head>
@@ -566,9 +567,9 @@
         }
       }
     }
-    function mousePressed() {
-      if (game_over && restart_text_rect && mouseX > restart_text_rect.x && mouseX < restart_text_rect.x + restart_text_rect.width &&
-          mouseY > restart_text_rect.y && mouseY < restart_text_rect.y + restart_text_rect.height) {
+    function handlePress(px, py) {
+      if (game_over && restart_text_rect && px > restart_text_rect.x && px < restart_text_rect.x + restart_text_rect.width &&
+          py > restart_text_rect.y && py < restart_text_rect.y + restart_text_rect.height) {
         player_pos = [3, 0];
         game = new Game();
         updateUILayout(); // Update layout after restart
@@ -576,9 +577,9 @@
       }
       if (game.game_state !== 'playing' && game.game_state !== 'game_over') return;
       if (!game_over) {
-        if (mouseX >= GRID_X && mouseX < GRID_X + GRID_WIDTH_PX && mouseY >= GRID_Y && mouseY < GRID_Y + GRID_HEIGHT_PX) {
-          let col = Math.floor((mouseX - GRID_X) / TILE_SIZE);
-          let row = Math.floor((mouseY - GRID_Y) / TILE_SIZE);
+        if (px >= GRID_X && px < GRID_X + GRID_WIDTH_PX && py >= GRID_Y && py < GRID_Y + GRID_HEIGHT_PX) {
+          let col = Math.floor((px - GRID_X) / TILE_SIZE);
+          let row = Math.floor((py - GRID_Y) / TILE_SIZE);
          
           if (row === exit_pos[0] && col === exit_pos[1]) {
             let [pr, pc] = player_pos;
@@ -594,33 +595,54 @@
           }
         } else {
           let roll_disabled = !game.selected_tile || game.rolled || game_over;
-          if (!roll_disabled && mouseX > roll_button_rect.x && mouseX < roll_button_rect.x + roll_button_rect.width &&
-              mouseY > roll_button_rect.y && mouseY < roll_button_rect.y + roll_button_rect.height) {
+          if (!roll_disabled && px > roll_button_rect.x && px < roll_button_rect.x + roll_button_rect.width &&
+              py > roll_button_rect.y && py < roll_button_rect.y + roll_button_rect.height) {
             roll_button_pressed = true;
-          } else if (game.rolled && resolve_button.is_clicked(mouseX, mouseY)) {
+          } else if (game.rolled && resolve_button.is_clicked(px, py)) {
             game.resolve_breach();
-          } else if (reroll1_button.is_clicked(mouseX, mouseY)) {
+          } else if (reroll1_button.is_clicked(px, py)) {
             game.use_rewind(0);
-          } else if (reroll2_button.is_clicked(mouseX, mouseY)) {
+          } else if (reroll2_button.is_clicked(px, py)) {
             game.use_rewind(1);
-          } else if (overload_button.is_clicked(mouseX, mouseY)) {
+          } else if (overload_button.is_clicked(px, py)) {
             game.use_overload();
-          } else if (!game.rolled && skip_button.is_clicked(mouseX, mouseY) && game.selected_tile) {
+          } else if (!game.rolled && skip_button.is_clicked(px, py) && game.selected_tile) {
             game.use_skip();
           }
         }
       }
     }
-    function mouseReleased() {
+    function handleRelease(px, py) {
       if (game.game_state === 'playing' && !game_over) {
         if (roll_button_pressed) {
           roll_button_pressed = false;
-          if (mouseX > roll_button_rect.x && mouseX < roll_button_rect.x + roll_button_rect.width &&
-              mouseY > roll_button_rect.y && mouseY < roll_button_rect.y + roll_button_rect.height) {
+          if (px > roll_button_rect.x && px < roll_button_rect.x + roll_button_rect.width &&
+              py > roll_button_rect.y && py < roll_button_rect.y + roll_button_rect.height) {
             game.roll_dice();
           }
         }
       }
+    }
+    function mousePressed() {
+      handlePress(mouseX, mouseY);
+    }
+    function mouseReleased() {
+      handleRelease(mouseX, mouseY);
+    }
+    function touchStarted() {
+      if (touches.length > 0) {
+        handlePress(touches[0].x, touches[0].y);
+      }
+      return false;
+    }
+    function touchEnded() {
+      if (touches.length > 0) {
+        handleRelease(touches[0].x, touches[0].y);
+      } else {
+        // Fallback if touches is empty on end
+        handleRelease(mouseX, mouseY);
+      }
+      return false;
     }
   </script>
 </body>
