--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     const GRID_SIZE = 4;
     let TILE_SIZE;
     let GRID_X, GRID_Y, GRID_WIDTH_PX, GRID_HEIGHT_PX, GRID_CENTER_X;
+    let baseButtonWidth, baseButtonHeight, baseYSpacing;
    
     // Player and Exit
     let player_pos = [3, 0];
@@ -303,7 +304,10 @@
       SCREEN_HEIGHT = windowHeight;
       createCanvas(SCREEN_WIDTH, SCREEN_HEIGHT);
       let isMobile = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
-      ORIGINAL_SIZE = isMobile ? 800 : 500; // Increased scaling on desktop
+      ORIGINAL_SIZE = isMobile ? 800 : 400; // Smaller ORIGINAL_SIZE for larger scaling on desktop
+      baseButtonWidth = isMobile ? 140 : 180; // Larger buttons on desktop
+      baseButtonHeight = isMobile ? 45 : 55;
+      baseYSpacing = isMobile ? 60 : 70;
       updateScale();
       textFont(pixelFont);
       game = new Game();
@@ -321,11 +325,11 @@
       GRID_X = (windowWidth - GRID_WIDTH_PX) / 2;
       GRID_Y = 120 * scaleFactor;
       GRID_CENTER_X = windowWidth / 2;
-      const BUTTON_WIDTH = 140 * scaleFactor;
-      const BUTTON_HEIGHT = 45 * scaleFactor;
+      const BUTTON_WIDTH = baseButtonWidth * scaleFactor;
+      const BUTTON_HEIGHT = baseButtonHeight * scaleFactor;
+      const Y_SPACING = baseYSpacing * scaleFactor;
       const LEFT_COL_X = (GRID_X - BUTTON_WIDTH) / 2;
       const LEFT_COL_Y_START = 300 * scaleFactor;
-      const Y_SPACING = 60 * scaleFactor;
       const RIGHT_COL_X = GRID_X + GRID_WIDTH_PX + (GRID_X - BUTTON_WIDTH) / 2;
      
       // Create Buttons
@@ -333,7 +337,7 @@
       reroll2_button = new Button(LEFT_COL_X, LEFT_COL_Y_START + Y_SPACING, BUTTON_WIDTH, BUTTON_HEIGHT, "RE ROLL 2 (1C)", YELLOW, WHITE);
       overload_button = new Button(LEFT_COL_X, LEFT_COL_Y_START + (2 * Y_SPACING), BUTTON_WIDTH, BUTTON_HEIGHT, "OVERLOAD (2C)", YELLOW, WHITE);
       skip_button = new Button(LEFT_COL_X, LEFT_COL_Y_START + (3 * Y_SPACING), BUTTON_WIDTH, BUTTON_HEIGHT, "SKIP (3C)", YELLOW, WHITE);
-      roll_button_rect = { x: RIGHT_COL_X, y: 330 * scaleFactor, width: 140 * scaleFactor, height: 50 * scaleFactor };
+      roll_button_rect = { x: RIGHT_COL_X, y: 330 * scaleFactor, width: baseButtonWidth * scaleFactor, height: 50 * scaleFactor };
       resolve_button = new Button(RIGHT_COL_X, 330 * scaleFactor + Y_SPACING, BUTTON_WIDTH, BUTTON_HEIGHT, "RESOLVE", GREEN, WHITE);
     }
    
@@ -458,7 +462,7 @@
         rect(x, y, TILE_SIZE, TILE_SIZE);
       }
       // --- Draw UI ---
-      const BUTTON_WIDTH = 140 * scaleFactor;
+      const BUTTON_WIDTH = baseButtonWidth * scaleFactor;
       const LEFT_COL_X = (GRID_X - BUTTON_WIDTH) / 2;
       const RIGHT_COL_X = GRID_X + GRID_WIDTH_PX + (GRID_X - BUTTON_WIDTH) / 2;
      
